testsuite/tests/grammar/invalid_lexers/spacing_1.lkt
from common import Example

lexer foo_lexer {
    @unparsing_spacing() family ids {
        Example <- "example"
    }
}
